# rag-assistant

./: .gitignore  Dockerfile  README.md  db.sqlite  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
app/: .env  server.py
database/: __init__.py  database.py  db.sqlite
model/: __init__.py  rag.py  vector_store.py
site/: index.html  package-lock.json  package.json  pnpm-lock.yaml
site/src/: App.tsx  ChatPrompt.tsx  HTTPHandlers.ts  PDFUploader.tsx  UploadClearButtons.tsx  main.tsx
