[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["w1ndrunn3rr"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <4.0"
fastapi = ">=0.115.7,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
pypdf2 = ">=3.0.1,<4.0.0"
langgraph = ">=0.2.67,<0.3.0"
langchain-openai = ">=0.3.2,<0.4.0"
langchain-text-splitters = "^0.3.5"
python-multipart = "^0.0.20"
numpy = "^2.2.2"
pydantic = "^2.10.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.server:start"

